--- a/VeterinarkaProject/WindowApp/AddWindow.xaml
+++ b/VeterinarkaProject/WindowApp/AddWindow.xaml
@@ -7,6 +7,21 @@
         mc:Ignorable="d"
         Title="AddWindow" Height="450" Width="800">
     <Grid>
-        
+        <StackPanel>
+            <Label Content="add priem" FontSize="24"/>
+            <Label Content="id_animal"/>
+            <TextBox x:Name="txtAnimal"/>
+            <Label Content="id_vrach"/>
+            <TextBox x:Name="txtVrach"/>
+            <Label Content="date"/>
+            <DatePicker x:Name="txtDate"/>
+            <Label Content="comment"/>
+            <TextBox x:Name="txtComment"/>
+            
+            <StackPanel HorizontalAlignment="Center" Margin="20" Orientation="Horizontal">
+                <Button Content="Сохранить" Height="30" Width="120" Margin="5" x:Name="btnSave" Click="btnSave_Click"/>
+                <Button Content="Отмена" Height="30" Width="120" Margin="5" x:Name="btnReturn" Click="btnReturn_Click"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
