--- a/VeterinarkaProject/WindowApp/ReductWindow.xaml
+++ b/VeterinarkaProject/WindowApp/ReductWindow.xaml
@@ -7,6 +7,21 @@
         mc:Ignorable="d"
         Title="ReductWindow" Height="450" Width="800">
     <Grid>
-        
+        <StackPanel>
+            <Label Content="reduct priem" FontSize="24"/>
+            <Label Content="id_animal"/>
+            <TextBox x:Name="txtAnimal" Text="{Binding id_animal}"/>
+            <Label Content="id_vrach"/>
+            <TextBox x:Name="txtVrach" Text="{Binding id_vrach}"/>
+            <Label Content="date"/>
+            <DatePicker x:Name="txtDate" Text="{Binding date_priem}"/>
+            <Label Content="comment"/>
+            <TextBox x:Name="txtComment" Text="{Binding comment}"/>
+
+            <StackPanel HorizontalAlignment="Center" Margin="20" Orientation="Horizontal">
+                <Button Content="Сохранить" Height="30" Width="120" Margin="5" x:Name="btnSave" Click="btnSave_Click"/>
+                <Button Content="Отмена" Height="30" Width="120" Margin="5" x:Name="btnReturn" Click="btnReturn_Click"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
