--- a/VeterinarkaProject/PageApp/MainPage.xaml
+++ b/VeterinarkaProject/PageApp/MainPage.xaml
@@ -21,7 +21,7 @@
         
         <StackPanel Grid.Column="1">
             <StackPanel Orientation="Horizontal">
-                <TextBox x:Name="Searchik" TextChanged="Searchik_TextChanged"/>
+                <TextBox x:Name="Searchik" TextChanged="Searchik_TextChanged" Width="120"/>
                 <Label Content="filtr"/>
             </StackPanel>
             
