--- a/VeterinarkaProject/WindowApp/AddWindow.xaml
+++ b/VeterinarkaProject/WindowApp/AddWindow.xaml
@@ -10,11 +10,21 @@
         <StackPanel>
             <Label Content="add priem" FontSize="24"/>
             <Label Content="id_animal"/>
-            <TextBox x:Name="txtAnimal"/>
+            <ComboBox ItemsSource="{Binding animals}" x:Name="comboAnimal">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <Label Content="{Binding name}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <!--<TextBox x:Name="txtAnimal"/>-->
             <Label Content="id_vrach"/>
             <TextBox x:Name="txtVrach"/>
             <Label Content="date"/>
-            <DatePicker x:Name="txtDate"/>
+            <DatePicker x:Name="dateDate"/>
+            <!--<DatePicker x:Name="txtDate"/>-->
             <Label Content="comment"/>
             <TextBox x:Name="txtComment"/>
             
